<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Password Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="btnAdd">Add</string>
    <string name="sourceTxt">Source:</string>
    <string name="loginTxt">Login:</string>
    <string name="passTxt">Password:</string>
    <string name="title_activity_main_activity2">Password Reminder</string>
    <string name="title_activity_main_activity3">Settings</string>
    <string name="delete_item">Delete item</string>
    <string name="title_activity_about">About</string>
    <string name="action_about">About</string>
    <string name="action_main">Main</string>
    <string name="title_activity_new">New</string>
    <string name="action_exit">Exit</string>
    <string name="enter_pass">Enter the main password</string>
    <string name="enter_the_new_pass">Create a new main password</string>
    <string name="wrong_pass">Wrong password.</string>
    <string name="setup_new_pass">Set up a new password</string>
    <string name="old_pass">Old password</string>
    <string name="new_pass">New password</string>
    <string name="new_pass_2">Repeat, please</string>
    <string name="apply_changes">Apply changes</string>
    <string name="copyright">Copyright 2015\n
    Aleksandr Cherkashin \n
   Leonid Zadorozhnykh
    </string>

    <string name="text_about">
        This application was created to remind your passwords to you. \n
        You can also store PINs, notes, and all other types of secret information.
        However we don\'t guarantee safety of any kind of data you enter. \n
        <b>Note! By using this app you agree that developers are not responsible for anything you keep here! </b>
        Always lock your device to be more secure \n
        <b>Have FUN with this APP!</b>
    </string>
    <string name="about">About</string>

</resources>
