<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zadorozhnykh.passwordreminder.MainActivity2">

    <item android:id="@+id/action_main"
        android:title="@string/action_main"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_about"
        android:title="@string/action_about"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/info"/>

    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText"
        android:icon="@drawable/exit"/>


</menu>
